--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/jkup/react-app-starter/issues"
   },
-  "homepage": "https://github.com/jkup/react-app-starter#readme",
+  "homepage": "",
   "devDependencies": {
     "babel-core": "^5.8.24",
     "babel-loader": "^5.3.2",
