--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "A starter template for react and webpack",
   "scripts": {
     "start": "webpack-dev-server --content-base build/",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy" : "npm run build&&gh-pages -d build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jkup/react-app-starter.git"
+    "url": "git+https://github.com/nemobaker/bullseye.git"
   },
   "keywords": [
     "webpack",
@@ -16,15 +17,16 @@
     "starter",
     "kit"
   ],
-  "author": "Jon Kuperman",
+  "author": "Nemo Baker",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jkup/react-app-starter/issues"
+    "url": "https://github.com/nemobaker/bullseye.git"
   },
-  "homepage": "",
+  "homepage": "https://nemobaker.github.io/bullseye",
   "devDependencies": {
     "babel-core": "^5.8.24",
     "babel-loader": "^5.3.2",
+    "gh-pages": "^0.12.0",
     "webpack": "^1.12.1"
   },
   "dependencies": {
